# plutus-js-bridge

./: README.md  cabal.project  plutus-browser-bridge.cabal  plutus-js-bridge.cabal
app/: bridge.hs
js/: helpers.js
src/: PlutusBridge.hs
src/PlutusBridge/: SampleData.hs  Utils.hs
