Cabal-Version:          3.6

Name:                   plutus-browser-bridge
Version:                0.1.0.0
Author:                 Keyan M.
Maintainer:             keyanmaskoot@snapbrillia.com
Build-Type:             Simple
Copyright:              © 2022 Snapbrillia
License:                Apache-2.0
License-files:          LICENSE

library
  hs-source-dirs:       src
  exposed-modules:      PlutusBridge.Utils
                      , PlutusBridge.SampleData
                      , PlutusBridge
  build-depends:        aeson
                      , base >= 4.9 && < 5
                      , bytestring
                      , cardano-api
                      , plutus-tx
                      , text
  default-language:     Haskell2010
  ghc-options:          -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise

executable plutus-bridge-app
  main-is:              bridge.hs
  hs-source-dirs:       app
  build-depends:        base >= 4.9 && < 5
                      , bytestring
                      , cardano-api
                      , filepath
                      , plutus-browser-bridge
                      , plutus-tx
                      , text
  default-language:     Haskell2010
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N -Weverything -O2
